--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "json-server": "json-server --watch src/Database/db.json --host 127.0.0.3  --port 3001 ",
     "dev": "concurrently \"npm start\" \"npm run json-server\"",
